helm-tests/template-tests/gateway-http-legacy-api-version.yaml
# Verify HTTPRoute continues to honor legacy gateway.apiVersion fallback with no TCPRoute output.

### SECTION:PARAMETERS ###
releaseName: gatewaylegacy
skipTest: false
### SECTION:VALUES ###
global:
  gateway:
    enabled: true
    apiVersion: gateway.networking.k8s.io/v1beta1
    parentRefs:
    - name: legacy-gateway
      namespace: pinghelm
      sectionName: https
  annotations:
    example.com/product-annotation: product
pingfederate-admin:
  enabled: true
  labels:
    example.com/product-label: "true"
  gateway:
    annotations:
      example.com/gateway-annotation: gateway
    hosts:
    - host: pingfederate-admin._defaultDomain_
      paths:
      - path: /
        pathType: PathPrefix
        backend:
          serviceName: https
### SECTION:EXPECTED ###
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gatewaylegacy-pingfederate-admin
  labels:
    example.com/product-label: "true"
  annotations:
    example.com/product-annotation: product
    example.com/gateway-annotation: gateway
spec:
  parentRefs:
  - name: legacy-gateway
    namespace: pinghelm
    sectionName: https
  hostnames:
  - pingfederate-admin.gatewaylegacy.example.com
  rules:
  - backendRefs:
    - name: gatewaylegacy-pingfederate-admin
      port: 9999
### SECTION:UNEXPECTED ###
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gatewaylegacy-pingfederate-admin-ldaps
